tests/fixtures/invalid/none_mul_str.py
# Cannot multiply None and Str
x: None = None * "hello"
